RESOLVED FIXED95139
[BlackBerry] Spellcheck should be enabled if undefined in content
https://bugs.webkit.org/show_bug.cgi?id=95139
Summary [BlackBerry] Spellcheck should be enabled if undefined in content
Nima Ghanavatian
Reported 2012-08-27 15:33:35 PDT
Currently we only enable spellcheck if it is defined as such in the web content explicitly. Making this change to enable by default, and only turn off if it is explicitly set, or if we expect the field to be a username, email or url.
Attachments
Patch (4.19 KB, patch)
2012-08-28 07:30 PDT, Nima Ghanavatian
no flags
Patch (4.20 KB, patch)
2012-08-28 09:32 PDT, Nima Ghanavatian
no flags
Archive of layout-test-results from gce-cr-linux-08 (619.03 KB, application/zip)
2012-08-28 10:29 PDT, WebKit Review Bot
no flags
Nima Ghanavatian
Comment 1 2012-08-28 07:30:26 PDT
Rob Buis
Comment 2 2012-08-28 08:14:38 PDT
Comment on attachment 160974 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=160974&action=review Looks good. > Source/WebKit/blackberry/WebKitSupport/InputHandler.h:202 > + bool shouldSpellCheckElement(const WebCore::Element*); Can the method be const?
Nima Ghanavatian
Comment 3 2012-08-28 09:32:43 PDT
Rob Buis
Comment 4 2012-08-28 09:35:14 PDT
Comment on attachment 160999 [details] Patch Looks good.
WebKit Review Bot
Comment 5 2012-08-28 10:29:44 PDT
Comment on attachment 160999 [details] Patch Attachment 160999 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/13653408 New failing tests: http/tests/security/mixedContent/filesystem-url-in-iframe.html
WebKit Review Bot
Comment 6 2012-08-28 10:29:47 PDT
Created attachment 161008 [details] Archive of layout-test-results from gce-cr-linux-08 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: gce-cr-linux-08 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.39-gcg-201203291735-x86_64-with-Ubuntu-10.04-lucid
WebKit Review Bot
Comment 7 2012-08-28 12:05:40 PDT
Comment on attachment 160999 [details] Patch Rejecting attachment 160999 [details] from commit-queue. Path LayoutTests/platform/chromium/virtual/gpu/fast/canvas/webgl/shader-precision-format.html does not exist. Full output: http://queues.webkit.org/results/13662333
WebKit Review Bot
Comment 8 2012-08-28 13:46:34 PDT
Comment on attachment 160999 [details] Patch Clearing flags on attachment: 160999 Committed r126925: <http://trac.webkit.org/changeset/126925>
WebKit Review Bot
Comment 9 2012-08-28 13:46:37 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.