[BlackBerry] Spellcheck should be enabled if undefined in content. https://bugs.webkit.org/show_bug.cgi?id=95139

Currently we only enable spellcheck if it is defined as such in
the web content explicitly.
Making this change to enable by default, and only turn off if it is
explicitly set, or if we expect the field to be a username, email or
url.

Internally reviewed by Mike Fenton.

Patch by Nima Ghanavatian <nghanavatian@rim.com> on 2012-08-28
Reviewed by Rob Buis.

* WebKitSupport/InputHandler.cpp:
(BlackBerry::WebKit::InputHandler::requestCheckingOfString):
(BlackBerry::WebKit::InputHandler::setElementFocused):
(BlackBerry::WebKit::InputHandler::unlockSequenceMap):
(WebKit):
(BlackBerry::WebKit::InputHandler::shouldSpellCheckElement):
* WebKitSupport/InputHandler.h:
(InputHandler):

Canonical link: https://commits.webkit.org/113102@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126925 268f45cc-cd09-0410-ab3c-d52691b4dbfc